<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_main_page"
        android:title="@string/inicio"
        app:showAsAction="never" />

    <item
        android:id="@+id/control_glucosa"
        android:title="@string/control_glucosa"
        app:showAsAction="never" />

    <item
        android:id="@+id/activity_med_alarm"
        android:title="@string/menu_alarma_med"
        app:showAsAction="never" />

    <item
        android:id="@+id/registro_activity"
        android:title="@string/registro"
        app:showAsAction="never" />

    <item
        android:id="@+id/activity_register_alimentos"
        android:title="@string/alimentos"
        app:showAsAction="never" />

    <item
        android:id="@+id/activity_info"
        android:title="@string/info_diabetes"
        app:showAsAction="never" />

    <item
        android:id="@+id/activity_calendar"
        android:title="@string/Programar_cita"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/cerrar_sesion"
        app:showAsAction="never" />
</menu>
