<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="1dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/tvTituloRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_datos"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tvNombreCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre_completo"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre_completo"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_edad"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edad"
        android:inputType="number"
        android:autofillHints="dateOfBirthYear" />

    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_genero"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvTipoDiabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_tipo_diabetes"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerTipoDiabetes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/diabetesDiagnosticadaLayout"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/hint_fecha_prueba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etFechaUltimaPrueba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fecha_prueba"
            android:inputType="date" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_instrucciones"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:inputType="numberDecimal"
        android:autofillHints="weight" />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_altura"
        android:inputType="numberDecimal"
        android:autofillHints="height" />

    <Button
        android:id="@+id/btnCalcularIMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular_imc"
        android:backgroundTint="@color/green"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvIMCResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_result"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:backgroundTint="@color/green"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnRegresarPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar_principal"
        android:backgroundTint="@color/green"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp" />

</LinearLayout>
